<resources>
    <string name="dateFormat" translatable="false">EE, dd MMM</string>
    <string name="timeFormat" translatable="false">EE, dd MMM HH:mm</string>
    <string name="period" translatable="false">%1$s – %2$s</string>
    <string name="app_name">Smart Controller</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_exist_email">This email address is already in use by another account</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_old_password">This old password is incorrect</string>
    <string name="error_match_password">This confirmation password do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_required">This email is required</string>
    <string name="error_room_name_required">This room name is required</string>
    <string name="error_room_name_existed">This room name is existed</string>
    <string name="error_room_name_too_long">"This room name too long"</string>
    <string name="error_password_required">This password is required</string>
    <string name="error_old_password_required">This old password is required</string>
    <string name="error_new_password_required">This new password is required</string>
    <string name="error_confirm_password_required">This confirmation password is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="login_failed">Login failed, check your email and password or sign up</string>
    <string name="register_failed">Register failed, check your email and password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_successfully">Change Password Successfully</string>
    <string name="change_password_failed">Failed to change password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="reset_password_failed">Failed to reset password</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="old_pass">Old Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="add_new_room">Add new room</string>
    <string name="room_name">Room name</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_add">Add</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_register">Register</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string-array name="default_devices_type">
        <item>All Household Equipments</item>
        <item>Air Conditioner</item>
        <item>Fan</item>
        <item>Heater</item>
        <item>Sensor</item>
    </string-array>

</resources>