<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:src="@drawable/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.03"
        android:text="@string/change_password"
        android:textColor="#0d6e6a"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/old_pass_edt_text"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pass_edt_text"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pass_edt_text_confirm"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_cancel"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>