<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:src="@drawable/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.03"
        android:text="@string/btn_reset_password"
        android:textColor="#0d6e6a"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_edt_text"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/forget"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/resetpass_btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/btn_reset_password"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_login"
        android:textColor="#0d6e6a"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>